Fix image slider bottom spacing

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ button:hover {
 
 .swiper {
   width: 65%;
-  height: 625px;
+  /* height: 590px; */
   border: 12px solid white;
   box-shadow: 0px 1px 4px 1px #1d1d1c29;
 }
@@ -132,6 +132,10 @@ button:hover {
 .swiper-slide img {
   width: 99.5%;
   margin-left: 2px;
+  height: fit-content;
+  object-fit: fill;
+  object-position: 50% 50%;
+  margin-bottom: -2rem;
 }
 
 .swiper-button-prev,
@@ -321,11 +325,6 @@ footer .container p {
 
 /* Small Laptops */
 @media (max-width: 1360px) {
-  /* Swiper */
-  .swiper {
-    height: fit-content;
-  }
-
   /* Main */
   main .container {
     gap: 6rem;
@@ -476,18 +475,16 @@ footer .container p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* border: 1px solid red; */
+
     height: 100%;
     gap: 2rem;
     padding-top: 2.5rem;
-    /* padding-bottom: 4rem; */
   }
 
   .about-text {
     align-items: center;
     width: 500px;
     text-align: center;
-    /* height: 500px; */
   }
 
   .about .container img {
@@ -718,12 +715,12 @@ footer .container p {
   }
 }
 
-/***************/
-/***PORTFOLIO***/
-/***************/
+/**********************/
+/**PORTFOLIO, PRICING**/
+/**********************/
 section.portfolio,
 section.pricing {
-  height: 400px;
+  height: 500px;
   display: flex;
   align-items: center;
 }
@@ -736,3 +733,7 @@ section.pricing h1 {
   color: #cfbda5;
   font-family: "Parisienne", cursive;
 }
+
+/**********************/
+/******MORE ABOUT******/
+/**********************/
